--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "proyecto",
+  "name": "primerproyecto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts",
+    "dev": "nodemon --exec ts-node index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type":"module",
   "devDependencies": {
-    "@types/node": "^24.6.2",
+    "@types/node": "^24.5.2",
+    "@types/axios":"^0.9.36",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.2"
+  },
+  "dependencies":{
+    "axios":"^1.12.2"
   }
 }
